# airflow-aviata

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
resources/: nginx-alpha.conf  nginx-betta.conf  provider-a.json  provider-b.json
src/api/: app.py  dependencies.py  worker.py
src/api/routes/: exchange_rates.py  search.py
src/client/alpha/: client.py
src/client/betta/: client.py
src/client/nationalbank/: client.py
src/reqresp/: national_bank.py  search.py
src/worker/: scheduler.py  worker.py
