[project]
name = "airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "apscheduler>=3.11.1",
    "fastapi>=0.120.4",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "redis[hiredis]>=7.0.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
    "xmltodict>=1.0.2",
]
